# enterprise-artifacts-indexing

./: .funcignore  .gitignore  AGENTS.md  AzuriteConfig  README.md  function_app.py  local.settings.example.json  pyproject.toml  requirements.txt
artifacts/: Architecture Guidelines.docx
docs/: test-generated.md
tests/: %2fShared+Documents%2fArchitecture+Guidelines.docx.md  %2fShared+Documents%2farchitecture+overview.png.md  %2fShared+Documents%2fuse+cases.png.md  test-generated-to-delete.md  test_architecture_guidelines_docx.py  test_logic_app.json  test_process_architecture_overview_png.py  test_process_docs.py  test_process_images.py  test_write_to_repo.py
